--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "karma-jasmine": "^1.1.2",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "3.0.0",
+    "karma-webpack": "^3.0.5",
     "lodash.template": "^4.4.0",
     "mapbox-gl": "0.50.0",
     "mocha": "^5.0.0",
