--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "earcut": "^2.1.2",
     "gl-matrix": "^2.8.1",
     "jsep": "CartoDB/jsep#additional-char-ids-packaged",
+    "lineclip": "^1.1.5",
     "lru-cache": "^4.1.1",
     "mitt": "^1.1.3",
     "pbf": "^3.1.0"
