--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "svg-inline-loader": "^0.8.0",
     "wait-on": "^3.1.0",
     "webpack": "^4.17.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.1",
     "webpack-glsl-loader": "^1.0.1",
     "worker-loader": "^2.0.0"
