Cleaning dist before any build

--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
   },
   "main": "dist/carto-vl.min.js",
   "scripts": {
-    "build": "yarn build:dev && yarn build:min",
+    "build": "yarn build:clean && yarn build:dev && yarn build:min",
+    "build:clean": "rm -rf dist/",
     "build:dev": "webpack --config webpack/webpack.config.js",
     "build:min": "webpack --config webpack/webpack.min.config.js",
     "build:watch": "webpack -w --config webpack/webpack.config.js",
@@ -104,16 +105,16 @@
     "test:user:watch": "karma start --no-single-run --auto-watch --browsers ChromeHeadlessNoSandbox test/integration/user/karma.conf.js",
     "test:user:watchc": "karma start --no-single-run --browsers Chrome test/integration/user/karma.conf.js",
     "test:browser": "karma start --no-single-run --browsers Chrome test/unit/karma.conf.js",
-    "test:render": "yarn build:dev && mocha test/integration/render/render.test.js --timeout 15000",
-    "test:render:min": "yarn build:min && MIN=1 mocha test/integration/render/render.test.js --timeout 15000",
+    "test:render": "yarn build:clean && yarn build:dev && mocha test/integration/render/render.test.js --timeout 15000",
+    "test:render:min": "yarn build:clean && yarn build:min && MIN=1 mocha test/integration/render/render.test.js --timeout 15000",
     "test:render:clean": "rm -rf test/integration/render/scenarios/**/**/reference.png",
-    "test:render:prepare": "yarn build:dev && node test/integration/render/render.prepare.js ",
+    "test:render:prepare": "yarn build:clean && yarn build:dev && node test/integration/render/render.prepare.js ",
     "test:e2e": "./scripts/run-local-e2e.sh",
     "test:e2e:clean": "rm -rf test/acceptance/e2e/**/reference.png",
-    "test:e2e:prepare": "yarn build:dev && node test/acceptance/e2e.prepare.js ",
+    "test:e2e:prepare": "yarn build:clean && yarn build:dev && node test/acceptance/e2e.prepare.js ",
     "test:fps": "node test/benchmark/fps/benchmark.js",
     "test:perf": "karma start --single-run --browsers Chrome test/benchmark/karma.conf.js",
-    "serve": "yarn build:dev && yarn docs && http-server --cors",
+    "serve": "yarn build:clean && yarn build:dev && yarn docs && http-server --cors",
     "preversion": "./scripts/preversion.sh",
     "postversion": "git push origin HEAD --follow-tags",
     "prepublishOnly": "./scripts/release.sh",
