--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - ./node_modules
-      - run: yarn build:min && yarn wait-on http://127.0.0.1:8181 && MIN=1 yarn mocha test/acceptance/e2e.test.js --timeout 25000
+      - run: yarn build:clean && yarn build:min && yarn wait-on http://127.0.0.1:8181 && MIN=1 yarn mocha test/acceptance/e2e.test.js --timeout 25000
 
   test-unit-lint-docs:
     docker:
