--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "exquisite-sst": "^1.6.0",
     "fastly": "^2.2.0",
     "glob": "^7.1.2",
-    "gzip-all": "^1.0.0",
     "http-server": "^0.11.1",
     "jasmine-core": "^3.2.1",
     "jsdoc": "^3.5.5",
@@ -90,9 +89,8 @@
     "build": "yarn build:clean && yarn build:dev && yarn build:min",
     "build:clean": "rm -rf dist/",
     "build:dev": "webpack --config webpack/webpack.config.js",
-    "build:min": "webpack --config webpack/webpack.min.config.js && yarn build:min:gzip",
+    "build:min": "webpack --config webpack/webpack.min.config.js",
     "build:min:report": "webpack-bundle-analyzer --port 4200 dist/stats.json",
-    "build:min:gzip": "gzip-all dist/**/*.min.js",
     "build:watch": "webpack -w --config webpack/webpack.config.js",
     "docs": "rm -rf docs/public; jsdoc --configure config/jsdoc/public-conf.json",
     "docs:all": "rm -rf docs/all; jsdoc --configure config/jsdoc/all-conf.json",
