Add tmux config file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ test/acceptance/e2e/**/*.html
 test/integration/render/**/*.html
 test/acceptance/docker/Windshaft-cartodb/
 .docker.run
+.mux.json
