--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "lineclip": "^1.1.5",
     "lru-cache": "^4.1.1",
     "mitt": "^1.1.3",
-    "pbf": "^3.1.0"
+    "pbf": "^3.1.0",
+    "proxy-polyfill-loader": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
