--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "Raúl Ochoa <rochoa@carto.com>",
     "Ariana Escobar <ariana@carto.com>",
     "Elena Torro <elena@carto.com>",
-    "Víctor Velarde <victor@carto.com>"
+    "Víctor Velarde <victor@carto.com>",
+    "Jesús Botella <jbotella@carto.com>"
   ],
   "license": "BSD-3-Clause",
   "files": [
