--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "base64-arraybuffer": "^0.2.0",
     "cartocolor": "^4.0.0",
     "earcut": "^2.1.2",
+    "geojson-vt": "^3.2.1",
     "gl-matrix": "^2.8.1",
     "jsep": "CartoDB/jsep#additional-char-ids-packaged-update-1",
     "lineclip": "^1.1.5",
     "lru-cache": "^4.1.1",
     "mitt": "^1.1.3",
-    "pbf": "^3.1.0"
+    "pbf": "^3.1.0",
+    "vt-pbf": "^3.1.1",
+    "wellknown": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
