--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "lineclip": "^1.1.5",
     "lru-cache": "^4.1.1",
     "mitt": "^1.1.3",
-    "pbf": "^3.1.0"
+    "pako": "^1.0.11",
+    "pbf": "^3.1.0",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
