--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "lru-cache": "^4.1.1",
     "mitt": "^1.1.3",
     "pako": "^1.0.11",
-    "pbf": "^3.1.0",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "pbf": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
